Changes to make project personal

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="copyright text-center">
     <p class="small no-margin">
       <span class="hint-text">Copyright © 2017</span>
-      <span class="font-montserrat"><a target="_blank" href="http://www.thinkseg.com">ThinkSeg</a></span>.
+      <span class="font-montserrat"><a target="_blank" href="http://www.google.com">Google</a></span>.
       <span class="hint-text"><%= "Todos os direitos reservados." %></span>
       <span class="sm-block"><a href="#" class="m-l-10 m-r-10"><%= "Termos de uso" %></a> | <a href="#" class="m-l-10"><%= "Politica de privacidade" %></a></span>
     </p>
