--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -33,11 +33,11 @@
           <td><%= incident.id %></td>
           <td><%= incident.title.truncate(35) %></td>
 
-          <% if incident.priority_level == Enumerations::PriorityLevel::LOW %>
+          <% if incident.priority_level == PriorityLevel::LOW %>
             <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
-          <% elsif incident.priority_level == Enumerations::PriorityLevel::MEDIUM %>
+          <% elsif incident.priority_level == PriorityLevel::MEDIUM %>
             <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
-          <% elsif incident.priority_level == Enumerations::PriorityLevel::HIGH %>
+          <% elsif incident.priority_level == PriorityLevel::HIGH %>
             <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
           <% end %>
 
@@ -46,17 +46,17 @@
           <td><%= brazil_date(incident.created_at) %></td>
           <td><%= brazil_date(incident.updated_at) %></td>
 
-          <% if incident.status == Enumerations::IncidentStatus::SOLVED %>
+          <% if incident.status == IncidentStatus::SOLVED %>
             <td><span class='label label-success'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == Enumerations::IncidentStatus::OPEN %>
+          <% elsif incident.status == IncidentStatus::OPEN %>
             <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == Enumerations::IncidentStatus::PENDING %>
+          <% elsif incident.status == IncidentStatus::PENDING %>
             <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
+          <% elsif incident.status == IncidentStatus::CLOSED %>
             <td><span class='label label-default'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == Enumerations::IncidentStatus::REOPENED %>
+          <% elsif incident.status == IncidentStatus::REOPENED %>
             <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
+          <% elsif incident.status == IncidentStatus::ANALYSING %>
             <td><span class='label label-primary'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
           <% end %>
 
@@ -67,35 +67,35 @@
           <% end %>
 
           <% if backofficer_signed_in? %>
-            <% if incident.status == Enumerations::IncidentStatus::OPEN || incident.status == Enumerations::IncidentStatus::REOPENED %>
+            <% if incident.status == IncidentStatus::OPEN || incident.status == IncidentStatus::REOPENED %>
               <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
               <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
+            <% elsif incident.status == IncidentStatus::SOLVED %>
               <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
               <td><%= link_to 'Reabrir Requisição', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
+            <% elsif incident.status == IncidentStatus::CLOSED %>
               <td><%= link_to 'Detalhes', incident, class: "btn btn-primary" %></td>
               <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
+            <% elsif incident.status == IncidentStatus::ANALYSING %>
               <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
               <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::PENDING %>
+            <% elsif incident.status == IncidentStatus::PENDING %>
               <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
               <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary" %></td>
             <% end %>
           <% elsif analyst_signed_in? %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-            <% if incident.status == Enumerations::IncidentStatus::OPEN %>
+            <% if incident.status == IncidentStatus::OPEN %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
+            <% elsif incident.status == IncidentStatus::ANALYSING %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::PENDING && current_analyst == incident.analyst %>
+            <% elsif incident.status == IncidentStatus::PENDING && current_analyst == incident.analyst %>
               <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
+            <% elsif incident.status == IncidentStatus::SOLVED %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::REOPENED %>
+            <% elsif incident.status == IncidentStatus::REOPENED %>
               <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == Enumerations::IncidentStatus::CLOSED || (incident.status == Enumerations::IncidentStatus::PENDING && current_analyst != incident.analyst) %>
+            <% elsif incident.status == IncidentStatus::CLOSED || (incident.status == IncidentStatus::PENDING && current_analyst != incident.analyst) %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
             <% end %>
           <% end %>
