--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -17,11 +17,11 @@
         <tr>
           <td><%= @incident.id %></td>
           <!-- priority_level -->
-          <% if @incident.priority_level == Enumerations::PriorityLevel::LOW %>
+          <% if @incident.priority_level == PriorityLevel::LOW %>
             <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/priority_level.low") %></span></td>
-          <% elsif @incident.priority_level == Enumerations::PriorityLevel::MEDIUM %>
+          <% elsif @incident.priority_level == PriorityLevel::MEDIUM %>
             <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/priority_level.medium") %></span></td>
-          <% elsif @incident.priority_level == Enumerations::PriorityLevel::HIGH %>
+          <% elsif @incident.priority_level == PriorityLevel::HIGH %>
             <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/priority_level.high") %></span></td>
           <% end %>
 
@@ -34,17 +34,17 @@
           <% end %>
           <td><%= brazil_date(@incident.updated_at) %></td>
           <!-- status -->
-          <% if @incident.status == Enumerations::IncidentStatus::SOLVED %>
+          <% if @incident.status == IncidentStatus::SOLVED %>
             <td><span class='label label-success'><%= I18n.t("enumerations.enumerations/incident_status.solved") %></span></td>
-          <% elsif @incident.status == Enumerations::IncidentStatus::OPEN %>
+          <% elsif @incident.status == IncidentStatus::OPEN %>
             <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/incident_status.open") %></span></td>
-          <% elsif @incident.status == Enumerations::IncidentStatus::PENDING %>
+          <% elsif @incident.status == IncidentStatus::PENDING %>
             <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/incident_status.pending") %></span></td>
-          <% elsif @incident.status == Enumerations::IncidentStatus::CLOSED %>
+          <% elsif @incident.status == IncidentStatus::CLOSED %>
             <td><span class='label label-default'><%= I18n.t("enumerations.enumerations/incident_status.closed") %></span></td>
-          <% elsif @incident.status == Enumerations::IncidentStatus::REOPENED %>
+          <% elsif @incident.status == IncidentStatus::REOPENED %>
             <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/incident_status.reopened") %></span></td>
-          <% elsif @incident.status == Enumerations::IncidentStatus::ANALYSING %>
+          <% elsif @incident.status == IncidentStatus::ANALYSING %>
             <td><span class='label label-primary'><%= I18n.t("enumerations.enumerations/incident_status.analysing") %></span></td>
           <% end %>
         </tr>
@@ -78,7 +78,7 @@
       <div class="centered">
         <h4>Análise</h4>
         <!-- solution -->
-        <% if @incident.status == Enumerations::IncidentStatus::PENDING%>
+        <% if @incident.status == IncidentStatus::PENDING%>
           <%= @incident.pending_description %>
         <% else %>
           <%= @incident.solution_description %>
@@ -96,10 +96,10 @@
         <th>Email do Usuário</th>
         <th>Número do Contrato</th>
         <th>CPF do Usuário</th>
-        <% if @incident.status == Enumerations::IncidentStatus::SOLVED || @incident.status == Enumerations::IncidentStatus::CLOSED %>
+        <% if @incident.status == IncidentStatus::SOLVED || @incident.status == IncidentStatus::CLOSED %>
           <th>Escopo do Problema</th>
           <th>Tipo do Erro</th>
-        <% elsif @incident.status == Enumerations::IncidentStatus::REOPENED %>
+        <% elsif @incident.status == IncidentStatus::REOPENED %>
           <th><span class='label label-danger'>Motivo da Reabertura</span></th>
       <% end %>
       </tr>
@@ -110,10 +110,10 @@
         <td><%= @incident.user_email %></td>
         <td><%= @incident.contract_id %></td>
         <td><%= @incident.user_cpf %></td>
-        <% if @incident.status == Enumerations::IncidentStatus::SOLVED || @incident.status == Enumerations::IncidentStatus::CLOSED %>
+        <% if @incident.status == IncidentStatus::SOLVED || @incident.status == IncidentStatus::CLOSED %>
           <td><%= @incident.problem_kind %></td>
           <td><%= @incident.entity %></td>
-        <% elsif @incident.status == Enumerations::IncidentStatus::REOPENED %>
+        <% elsif @incident.status == IncidentStatus::REOPENED %>
           <td><%= @incident.reopening_description %></td>
         <% end %>
       </tr>
@@ -124,38 +124,38 @@
 
 <div class="text-center">
   <% if backofficer_signed_in? %>
-    <% if @incident.status == Enumerations::IncidentStatus::OPEN || @incident.status == Enumerations::IncidentStatus::PENDING %>
+    <% if @incident.status == IncidentStatus::OPEN || @incident.status == IncidentStatus::PENDING %>
       <%= link_to 'Editar dados da Requisição', edit_incident_path(@incident), class: "btn btn-default" %>
-    <% elsif @incident.status == Enumerations::IncidentStatus::SOLVED %>
+    <% elsif @incident.status == IncidentStatus::SOLVED %>
       <%= link_to 'Reabrir Requisição', reopen_path(id: @incident.id), class: "btn btn-danger" %>
-    <% elsif @incident.status == Enumerations::IncidentStatus::ANALYSING %>
+    <% elsif @incident.status == IncidentStatus::ANALYSING %>
       <%= link_to 'Editar dados da Requisição', edit_incident_path(@incident), class: "btn btn-default disabled", :disabled => true %>
-    <% elsif @incident.status == Enumerations::IncidentStatus::REOPENED %>
+    <% elsif @incident.status == IncidentStatus::REOPENED %>
       <%= link_to 'Editar dados da Requisição', edit_incident_path(@incident), class: "btn btn-default" %>
       <%= "  |  " %>
       <%= link_to 'Editar motivo da Reabertura', reopen_path(id: @incident.id), class: "btn btn-danger" %>
     <% end %>
 <% elsif analyst_signed_in? %>
-    <% if @incident.status == Enumerations::IncidentStatus::OPEN %>
+    <% if @incident.status == IncidentStatus::OPEN %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger" %>
       <%= "  |  " %>
       <%= link_to 'Resolver Requisição', solve_path(id: @incident.id), class: "btn btn-success disabled", :disabled => true %>
-    <% elsif @incident.status == Enumerations::IncidentStatus::REOPENED %>
+    <% elsif @incident.status == IncidentStatus::REOPENED %>
       <%= link_to 'Reiniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger" %>
-    <% elsif @incident.status == Enumerations::IncidentStatus::ANALYSING && @incident.analyst_id == current_analyst.id %>
+    <% elsif @incident.status == IncidentStatus::ANALYSING && @incident.analyst_id == current_analyst.id %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
       <%= "  |  " %>
       <%= link_to 'Resolver Requisição', solve_path(id: @incident.id), method: :get, class: "btn btn-success" %>
       <%= "  |  " %>
       <%= link_to 'Pendente', pending_path(id: @incident.id), method: :get, class: "btn btn-primary" %>
-    <% elsif (@incident.status == Enumerations::IncidentStatus::ANALYSING || @incident.status == Enumerations::IncidentStatus::PENDING) && @incident.analyst_id != current_analyst.id %>
+    <% elsif (@incident.status == IncidentStatus::ANALYSING || @incident.status == IncidentStatus::PENDING) && @incident.analyst_id != current_analyst.id %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
       <%= "  |  " %>
       <%= link_to 'Pegar Requisição', incident_capture_path(@incident.id), method: :patch, data: { confirm: 'Tem certeza que deseja capturar essa requisição?' }, class: "btn btn-success" %>
-    <% elsif (@incident.status == Enumerations::IncidentStatus::PENDING || @incident.status == Enumerations::IncidentStatus::REOPENED) && @incident.analyst_id == current_analyst.id %>
+    <% elsif (@incident.status == IncidentStatus::PENDING || @incident.status == IncidentStatus::REOPENED) && @incident.analyst_id == current_analyst.id %>
       <td><%= link_to 'Reiniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger" %></td>
     <% end %>
-    <% if @incident.status == Enumerations::IncidentStatus::CLOSED || @incident.status == Enumerations::IncidentStatus::SOLVED %>
+    <% if @incident.status == IncidentStatus::CLOSED || @incident.status == IncidentStatus::SOLVED %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
       <%= "  |  " %>
       <%= link_to 'Resolver Requisição', edit_incident_path(@incident), class: "btn btn-success disabled", :disabled => true %>
