--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -15,11 +15,12 @@ body, html {
 }
 
 #show-gmaps label {
-  width: auto; display:inline;
+  width: auto;
+  display:inline;
 }
 
 .logo {
-  height: 200%;
+  margin-bottom: -50px;
   margin-left: 50px;
 }
 
