--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <span class='nav navbar-brand'><%= link_to(image_tag('logo.png'), root_path, class: "logo") %></span>
-    <ul class="nav navbar-nav pull-right">
+<nav class='navbar navbar-default'>
+  <div class='container-fluid'>
+    <span class='logo'><%= link_to(image_tag('logo.png'), root_path) %></span>
+    <ul class='nav navbar-nav pull-right'>
       <% if signed_in? %>
-        <li class="nav-item"><%= link_to "Minhas Requisições", my_incidents_path %></li>
-        <li class="nav-item"><%= link_to "Meus Dados", edit_registration_path(check_user) %></li>
-        <li class="nav-item"><%= link_to "Sair", destroy_session_path(check_user), method: "delete" %></li>
+        <li class='nav-item'><%= link_to 'Minhas Requisições', my_incidents_path %></li>
+        <li class='nav-item'><%= link_to 'Meus Dados', edit_registration_path(check_user) %></li>
+        <li class='nav-item'><%= link_to 'Sair', destroy_session_path(check_user), method: 'delete' %></li>
       <% else %>
-        <li class="nav-item"><%= link_to "Cadastrar", new_backofficer_registration_path %></li>
-        <li class="nav-item"><%= link_to "Login", new_backofficer_session_path %></li>
+        <li class='nav-item'><%= link_to 'Cadastrar', new_backofficer_registration_path %></li>
+        <li class='nav-item'><%= link_to 'Login', new_backofficer_session_path %></li>
       <% end %>
     </ul>
   </div>
