--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -25,6 +25,12 @@ body, html {
   margin-left: 10px;
 }
 
+#list_incidents {
+  th {
+    text-align: center;
+  }
+}
+
 .navbar-default {
   margin-bottom: 0px;
 }
