--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -11,54 +11,32 @@
 
 <%= render 'search' %>
 
-<div class="basic-grey">
-  <div class="centered">
+<div class='basic-grey'>
+  <div class='centered' id='list_incidents'>
     <table>
       <thead>
-      <tr>
-        <th class="not_mapped_style" style="text-align:center">ID</th>
-        <th class="not_mapped_style" style="text-align:center">Resumo do Problema</th>
-        <th class="not_mapped_style" style="text-align:center">Nível de Prioridade</th>
-        <th class="not_mapped_style" style="text-align:center">Reportador por</th>
-        <th class="not_mapped_style" style="text-align:center">Aberto Em</th>
-        <th class="not_mapped_style" style="text-align:center">Última Atualização</th>
-        <th class="not_mapped_style" style="text-align:center">Status</th>
-        <th class="not_mapped_style" style="text-align:center">Analista</th>
-        <th colspan="3"></th>
-      </tr>
+        <tr>
+          <th>ID</th>
+          <th>Resumo do Problema</th>
+          <th>Nível de Prioridade</th>
+          <th>Reportador por</th>
+          <th>Aberto Em</th>
+          <th>Última Atualização</th>
+          <th>Status</th>
+          <th>Analista</th>
+          <th colspan="3"></th>
+        </tr>
       </thead>
       <tbody>
       <% @incidents.each do |incident| %>
-        <tr style= "background: <%= cycle('white', 'ice') %>">
+        <tr style="background: <%= cycle('white', 'ice') %>">
           <td><%= incident.id %></td>
           <td><%= incident.title.truncate(35) %></td>
-
-          <% if incident.priority_level == PriorityLevel::LOW %>
-            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
-          <% elsif incident.priority_level == PriorityLevel::MEDIUM %>
-            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
-          <% elsif incident.priority_level == PriorityLevel::HIGH %>
-            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/priority_level.#{incident.priority_level}") %></span></td>
-          <% end %>
-
+          <td><%= raw incident_priority(incident) %></td>
           <td><%= incident.backofficer.name %></td>
-
           <td><%= brazil_date(incident.created_at) %></td>
           <td><%= brazil_date(incident.updated_at) %></td>
-
-          <% if incident.status == IncidentStatus::SOLVED %>
-            <td><span class='label label-success'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == IncidentStatus::OPEN %>
-            <td><span class='label label-warning'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == IncidentStatus::PENDING %>
-            <td><span class='label label-info'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == IncidentStatus::CLOSED %>
-            <td><span class='label label-default'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == IncidentStatus::REOPENED %>
-            <td><span class='label label-danger'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% elsif incident.status == IncidentStatus::ANALYSING %>
-            <td><span class='label label-primary'><%= I18n.t("enumerations.enumerations/incident_status.#{incident.status}") %></span></td>
-          <% end %>
+          <td><%= raw incident_status(incident) %></td>
 
           <% if incident.analyst.blank? %>
             <td><%= 'Sem atendimento' %> </td>
