--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -28,57 +28,7 @@
         </tr>
       </thead>
       <tbody>
-      <% @incidents.each do |incident| %>
-        <tr style="background: <%= cycle('white', 'ice') %>">
-          <td><%= incident.id %></td>
-          <td><%= incident.title.truncate(35) %></td>
-          <td><%= raw incident_priority(incident) %></td>
-          <td><%= incident.backofficer.name %></td>
-          <td><%= brazil_date(incident.created_at) %></td>
-          <td><%= brazil_date(incident.updated_at) %></td>
-          <td><%= raw incident_status(incident) %></td>
-
-          <% if incident.analyst.blank? %>
-            <td><%= 'Sem atendimento' %> </td>
-          <% else %>
-            <td><%= incident.analyst.name %> </td>
-          <% end %>
-
-          <% if backofficer_signed_in? %>
-            <% if incident.status == IncidentStatus::OPEN || incident.status == IncidentStatus::REOPENED %>
-              <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-              <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
-            <% elsif incident.status == IncidentStatus::SOLVED %>
-              <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-              <td><%= link_to 'Reabrir Requisição', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
-            <% elsif incident.status == IncidentStatus::CLOSED %>
-              <td><%= link_to 'Detalhes', incident, class: "btn btn-primary" %></td>
-              <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-            <% elsif incident.status == IncidentStatus::ANALYSING %>
-              <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-              <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-            <% elsif incident.status == IncidentStatus::PENDING %>
-              <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-              <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary" %></td>
-            <% end %>
-          <% elsif analyst_signed_in? %>
-            <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-            <% if incident.status == IncidentStatus::OPEN %>
-              <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == IncidentStatus::ANALYSING %>
-              <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-            <% elsif incident.status == IncidentStatus::PENDING && current_analyst == incident.analyst %>
-              <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == IncidentStatus::SOLVED %>
-              <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-            <% elsif incident.status == IncidentStatus::REOPENED %>
-              <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == IncidentStatus::CLOSED || (incident.status == IncidentStatus::PENDING && current_analyst != incident.analyst) %>
-              <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-            <% end %>
-          <% end %>
-        </tr>
-      <% end %>
+        <%= render partial: 'incidents/partials/list_incidents', locals: { incidents: @incidents } %>
       </tbody>
     </table>
   </div>
