Remove view code redundance, not 100% yet

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -34,4 +34,4 @@
   </div>
 </div>
 
-<div class="panel-heading" align="center"><%= will_paginate @my_incidents %></div>
+<div class="panel-heading" align="center"><%= will_paginate @incidents %></div>
