Use index action for all list incidents actions

--- a/app/views/incidents/_search.html.erb
+++ b/app/views/incidents/_search.html.erb
@@ -6,7 +6,7 @@
           <div class="col-lg-3"></div>
           <div class="col-lg-6">
             <div class="input-group">
-              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar Requisição..." }) %>
+              <%= text_field_tag(:q, params[:q], { class: 'form-control', placeholder: 'Pesquisar Requisição...' }) %>
               <span class="input-group-btn">
                 <%= submit_tag("Pesquisar", class:"btn btn-default") %>
               </span>
