--- a/app/views/incidents/pending.html.erb
+++ b/app/views/incidents/pending.html.erb
@@ -65,7 +65,7 @@
             </div>
           </div>
 
-          <%= f.hidden_field :status, value: IncidentStatus::PENDING %>
+          <%= f.hidden_field :status, value: Status::PENDING %>
 
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
