--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -71,7 +71,7 @@
               </div>
             </div>
 
-            <%= f.hidden_field :status, value: IncidentStatus::SOLVED %>
+            <%= f.hidden_field :status, value: Status::SOLVED %>
             <%= f.hidden_field :analyst_id, value: current_analyst.id %>
 
             <div class="form-group">
