--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   </head>
   <body>
     <%= render partial: 'layouts/navbar' %>
+    <%= render partial: 'layouts/notifications' %>
     <%= yield %>
   </body>
 </html>
