--- a/app/views/incidents/_search.html.erb
+++ b/app/views/incidents/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_tag search_path, method: :get do %>
+  <%= form_tag search_incidents_path, method: :get  do %>
     <div class="row">
       <div class="well well-sm">
         <div class="row">
