--- a/app/views/incidents/partials/_backofficer_actions.html.erb
+++ b/app/views/incidents/partials/_backofficer_actions.html.erb
@@ -1,7 +1,7 @@
 <% if incident.status == Status::OPEN || incident.status == Status::REOPENED %>
   <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: 'btn btn-primary' %></td>
 <% elsif incident.status == Status::SOLVED %>
-  <td><%= link_to 'Reabrir Requisição', reopen_path(id: incident.id), class: 'btn btn-danger' %></td>
+  <td><%= link_to 'Reabrir Requisição', reopen_incident_path(incident), class: 'btn btn-danger' %></td>
 <% elsif incident.status == Status::CLOSED %>
   <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: 'btn btn-primary disabled' %></td>
 <% elsif incident.status == Status::ANALYSING %>
